<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_field_hint"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:startIconDrawable="@drawable/ic_account_box">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_field_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/login_field_layout"
            app:layout_constraintStart_toStartOf="@id/login_field_layout"
            app:layout_constraintTop_toBottomOf="@id/login_field_layout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password_field_hint"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/password_field_layout"
            app:layout_constraintStart_toStartOf="@id/password_field_layout"
            app:layout_constraintTop_toBottomOf="@id/password_field_layout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/chechbox_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_field_layout"
            app:layout_constraintStart_toStartOf="@id/confirm_password_field_layout"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_field_layout">

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb1" />

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb2" />

            <CheckBox
                android:id="@+id/cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/radio_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/chechbox_wrapper"
            app:layout_constraintStart_toStartOf="@id/chechbox_wrapper"
            app:layout_constraintTop_toBottomOf="@id/chechbox_wrapper">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_much" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb1" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb2" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb3" />

                <RadioButton
                    android:checked="true"
                    android:visibility="gone"
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="" />

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_button"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/radio_wrapper"
            app:layout_constraintStart_toStartOf="@id/radio_wrapper"
            app:layout_constraintTop_toBottomOf="@id/radio_wrapper" />

    </LinearLayout>

</ScrollView>